--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -18,11 +18,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# your code here\n",
+    "import mysql.connector\n",
+    "cnx = mysql.connector.connect(user =\"root\", password=\"Perolaoinc2!\", host=\"127.0.0.1\", database = 'sakila', auth_plugin = 'mysql_native_password')\n",
+    "cnx.is_connected()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "select * from sakila.actor;\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = (\"\"\"select * from sakila.actor;\"\"\")\n",
+    "print(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<mysql.connector.cursor_cext.CMySQLCursor at 0x10a79a950>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cursor = cnx.cursor()\n",
+    "cursor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "cursor.execute(query)"
    ]
   },
   {
@@ -35,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +272,7 @@
        "4    Valid           L6 -33.16667  -64.95000  1902-01-01T00:00:00.000  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +305,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -266,13 +328,13 @@
        "Name: fall, dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#OUTRA SOLUÇÃO\n",
+    "#ANOTHER SOLUTION\n",
     "nasa['fall'].value_counts()"
    ]
   },
@@ -333,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +666,7 @@
        "55      1  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,14 +691,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: xlrd in /Users/barbaramuniz/opt/anaconda3/lib/python3.8/site-packages (2.0.1)\n",
+      "Collecting xlrd\n",
+      "  Downloading xlrd-2.0.1-py2.py3-none-any.whl (96 kB)\n",
+      "     |████████████████████████████████| 96 kB 2.2 MB/s            \n",
+      "\u001b[?25hInstalling collected packages: xlrd\n",
+      "Successfully installed xlrd-2.0.1\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -647,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +927,7 @@
        "4                               Gemini 12, Apollo 11        NaT           NaN  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -881,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -902,7 +968,7 @@
        "Length: 83, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -914,33 +980,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Physics                                          35\n",
-       "Aerospace Engineering                            33\n",
-       "Mechanical Engineering                           30\n",
-       "Aeronautical Engineering                         28\n",
-       "Electrical Engineering                           23\n",
-       "                                                 ..\n",
-       "Physiology                                        1\n",
-       "Music                                             1\n",
-       "Physics & Astronautical Engineering               1\n",
-       "Ceramic Engineering                               1\n",
-       "Business Management; Aeronautical Engineering     1\n",
+       "Physics                                  35\n",
+       "Aerospace Engineering                    33\n",
+       "Mechanical Engineering                   30\n",
+       "Aeronautical Engineering                 28\n",
+       "Electrical Engineering                   23\n",
+       "                                         ..\n",
+       "Astronomy                                 1\n",
+       "Marine Engineering & Nautical Science     1\n",
+       "Philosophy                                1\n",
+       "Bioscience                                1\n",
+       "Military Science                          1\n",
        "Name: Undergraduate Major, Length: 83, dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#OUTRA SOLUÇÃO\n",
+    "#another solution\n",
     "astronaut['Undergraduate Major'].value_counts()"
    ]
   },
@@ -953,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -975,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1111,7 +1177,7 @@
        "4                                   0.50      O  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1133,7 +1199,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1147,7 +1213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
