--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -22,7 +22,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -35,11 +36,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "import pandas as pd "
    ]
   },
   {
@@ -51,11 +53,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "nasa = pd.read_json(\"nasa.json\")"
    ]
   },
   {
@@ -67,11 +70,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>:@computed_region_cbhk_fwbd</th>\n",
+       "      <th>:@computed_region_nnqa_25f4</th>\n",
+       "      <th>fall</th>\n",
+       "      <th>geolocation</th>\n",
+       "      <th>id</th>\n",
+       "      <th>mass</th>\n",
+       "      <th>name</th>\n",
+       "      <th>nametype</th>\n",
+       "      <th>recclass</th>\n",
+       "      <th>reclat</th>\n",
+       "      <th>reclong</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Fell</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [6.08333, 50....</td>\n",
+       "      <td>1</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>Aachen</td>\n",
+       "      <td>Valid</td>\n",
+       "      <td>L5</td>\n",
+       "      <td>50.77500</td>\n",
+       "      <td>6.08333</td>\n",
+       "      <td>1880-01-01T00:00:00.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Fell</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [10.23333, 56...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>720.0</td>\n",
+       "      <td>Aarhus</td>\n",
+       "      <td>Valid</td>\n",
+       "      <td>H6</td>\n",
+       "      <td>56.18333</td>\n",
+       "      <td>10.23333</td>\n",
+       "      <td>1951-01-01T00:00:00.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Fell</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [-113, 54.216...</td>\n",
+       "      <td>6</td>\n",
+       "      <td>107000.0</td>\n",
+       "      <td>Abee</td>\n",
+       "      <td>Valid</td>\n",
+       "      <td>EH4</td>\n",
+       "      <td>54.21667</td>\n",
+       "      <td>-113.00000</td>\n",
+       "      <td>1952-01-01T00:00:00.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Fell</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [-99.9, 16.88...</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1914.0</td>\n",
+       "      <td>Acapulco</td>\n",
+       "      <td>Valid</td>\n",
+       "      <td>Acapulcoite</td>\n",
+       "      <td>16.88333</td>\n",
+       "      <td>-99.90000</td>\n",
+       "      <td>1976-01-01T00:00:00.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Fell</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [-64.95, -33....</td>\n",
+       "      <td>370</td>\n",
+       "      <td>780.0</td>\n",
+       "      <td>Achiras</td>\n",
+       "      <td>Valid</td>\n",
+       "      <td>L6</td>\n",
+       "      <td>-33.16667</td>\n",
+       "      <td>-64.95000</td>\n",
+       "      <td>1902-01-01T00:00:00.000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   :@computed_region_cbhk_fwbd  :@computed_region_nnqa_25f4  fall  \\\n",
+       "0                          NaN                          NaN  Fell   \n",
+       "1                          NaN                          NaN  Fell   \n",
+       "2                          NaN                          NaN  Fell   \n",
+       "3                          NaN                          NaN  Fell   \n",
+       "4                          NaN                          NaN  Fell   \n",
+       "\n",
+       "                                         geolocation   id      mass      name  \\\n",
+       "0  {'type': 'Point', 'coordinates': [6.08333, 50....    1      21.0    Aachen   \n",
+       "1  {'type': 'Point', 'coordinates': [10.23333, 56...    2     720.0    Aarhus   \n",
+       "2  {'type': 'Point', 'coordinates': [-113, 54.216...    6  107000.0      Abee   \n",
+       "3  {'type': 'Point', 'coordinates': [-99.9, 16.88...   10    1914.0  Acapulco   \n",
+       "4  {'type': 'Point', 'coordinates': [-64.95, -33....  370     780.0   Achiras   \n",
+       "\n",
+       "  nametype     recclass    reclat    reclong                     year  \n",
+       "0    Valid           L5  50.77500    6.08333  1880-01-01T00:00:00.000  \n",
+       "1    Valid           H6  56.18333   10.23333  1951-01-01T00:00:00.000  \n",
+       "2    Valid          EH4  54.21667 -113.00000  1952-01-01T00:00:00.000  \n",
+       "3    Valid  Acapulcoite  16.88333  -99.90000  1976-01-01T00:00:00.000  \n",
+       "4    Valid           L6 -33.16667  -64.95000  1902-01-01T00:00:00.000  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "nasa.head()"
    ]
   },
   {
@@ -85,11 +232,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Fell     996\n",
+       "Found      4\n",
+       "Name: fall, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "nasa['fall'].value_counts()"
    ]
   },
   {
@@ -101,11 +262,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "nasa.to_csv('nasa-output.json', sep=',', index= False)"
    ]
   },
   {
@@ -128,7 +290,8 @@
    "outputs": [],
    "source": [
     "#Your pandas import here:\n",
-    "\n"
+    "\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -150,7 +313,7 @@
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "shuttle = pd.read_csv(tst_url, sep=' ', names= cols)\n"
    ]
   },
   {
@@ -167,7 +330,7 @@
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "shuttle.head()\n"
    ]
   },
   {
@@ -184,7 +347,8 @@
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "shuttle.to_csv('shuttle.csv', sep=',', index= False)"
    ]
   },
   {
@@ -205,7 +369,7 @@
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "astronaut = pd.read_excel('astronauts.xls')\n"
    ]
   },
   {
@@ -222,7 +386,7 @@
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "astronaut.head()\n"
    ]
   },
   {
@@ -239,7 +403,8 @@
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "stronaut['Undergraduate Major'].value_counts()"
    ]
   },
   {
@@ -256,7 +421,8 @@
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "astronaut.to_csv('astronaut.csv', sep= '\\t', index= False)"
    ]
   },
   {
@@ -281,7 +447,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -295,7 +461,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
