--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -21,9 +21,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# your code here\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -39,7 +37,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -55,7 +54,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "nasa = pd.read_json('nasa.json')"
    ]
   },
   {
@@ -89,7 +89,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "nasa.head()"
    ]
   },
   {
@@ -105,7 +106,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "nasa['fall'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nasa.to_json(r'C:\\\\Users\\\\DELL\\\\Desktop\\\\LABS\\\\lab-import-export\\\\your-code\\\\nasa-output.json')"
    ]
   },
   {
@@ -128,7 +139,8 @@
    "outputs": [],
    "source": [
     "#Your pandas import here:\n",
-    "\n"
+    "\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -150,7 +162,8 @@
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "shuttle = pd.read_csv(tst_url, sep=\" \", header=None, names=cols)"
    ]
   },
   {
@@ -167,7 +180,8 @@
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "shuttle.head()"
    ]
   },
   {
@@ -184,7 +198,8 @@
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "shuttle.to_csv('shuttle.csv',sep=',',index=False)"
    ]
   },
   {
@@ -205,7 +220,8 @@
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "astronaut = pd.read_excel('astronauts.xls')"
    ]
   },
   {
@@ -222,7 +238,8 @@
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "astronaut.head()"
    ]
   },
   {
@@ -239,7 +256,8 @@
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "astronaut['Undergraduate Major'].value_counts()"
    ]
   },
   {
@@ -256,7 +274,8 @@
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "astronaut.to_csv('astronaut.csv',sep='\\t',index=False)"
    ]
   },
   {
@@ -281,7 +300,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -295,7 +314,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
