--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -18,11 +18,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# your code here\n",
+    "import mysql.connector\n",
+    "import getpass\n",
+    "\n",
+    "cnx = mysql.connector.connect(user = 'root',\n",
+    "                            password = getpass.getpass(),\n",
+    "                            host = '127.0.0.1')\n",
+    "\n",
+    "cnx.is_connected()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Sports', 74),\n",
+       " ('Foreign', 73),\n",
+       " ('Family', 69),\n",
+       " ('Documentary', 68),\n",
+       " ('Animation', 66),\n",
+       " ('Action', 64),\n",
+       " ('New', 63),\n",
+       " ('Drama', 62),\n",
+       " ('Games', 61),\n",
+       " ('Sci-Fi', 61),\n",
+       " ('Children', 60),\n",
+       " ('Comedy', 58),\n",
+       " ('Classics', 57),\n",
+       " ('Travel', 57),\n",
+       " ('Horror', 56),\n",
+       " ('Music', 51)]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cursor = cnx.cursor()\n",
+    "\n",
+    "# In order to explore the data, I wrote a query that returns each category and the number of films within them.\n",
+    "\n",
+    "query = \"\"\"\n",
+    "SELECT c.name, COUNT(f.title) AS number_of_films\n",
+    "FROM sakila.film f\n",
+    "INNER JOIN sakila.film_category fc\n",
+    "ON f.film_id = fc.film_id\n",
+    "INNER JOIN sakila.category c\n",
+    "ON fc.category_id = c.category_id\n",
+    "GROUP BY c.name\n",
+    "ORDER BY number_of_films DESC;\n",
+    "\"\"\"\n",
+    "\n",
+    "cursor.execute(query)\n",
+    "\n",
+    "result = cursor.fetchall()\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "cursor.close()\n",
+    "cnx.close()"
    ]
   },
   {
@@ -35,11 +117,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -281,7 +364,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.12 ('ironhack')",
    "language": "python",
    "name": "python3"
   },
@@ -295,7 +378,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "0094f863879e23567bc7f1203464ab0e17c9a144de34e46277031dbb63b00f13"
+   }
   }
  },
  "nbformat": 4,
