--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -22,7 +22,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "import pandas as pd\n",
+    "import mysql.connector\n",
+    "\n",
+    "cnx = mysql.connector.connect(user = 'user',password ='sporting' ,host='127.0.0.1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cnx.is_connected()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cursor = cnx.cursor()\n",
+    "cursor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"\"\"SELECT film.title, film.description, film.release_year, film_actor.last_update\n",
+    "FROM sakila.film\n",
+    "INNER JOIN sakila.film_actor\n",
+    "ON film.film_id = film_actor.film_id;\"\"\"\n",
+    "cursor.execute(query)\n",
+    "result = cursor.fetchall()\n",
+    "Films = pd.DataFrame(result)\n",
+    "Films = pd.DataFrame(result, columns = [col_name[0] for col_name in cursor.description])\n",
+    "Films\n"
    ]
   },
   {
@@ -39,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "import pandas as pd"
    ]
   },
   {
@@ -55,7 +94,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "nasa = pd.read_json(r'C:\\Users\\Daniel Carvalho\\Desktop\\DataAnalysis\\WEEK2\\DAY4\\labs\\lab-import-export\\your-code\\nasa.json')"
    ]
   },
   {
@@ -71,7 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "nasa.head(3)\n"
    ]
   },
   {
@@ -89,7 +128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "nasa['fall'].value_counts()\n"
    ]
   },
   {
@@ -105,7 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "nasa = nasa.to_json()"
    ]
   },
   {
@@ -123,17 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Your pandas import here:\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,12 +174,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "shuttle = pd.read_csv(tst_url, sep=' ', names=cols)\n",
+    "shuttle"
    ]
   },
   {
@@ -162,12 +191,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "shuttle.head(3)"
    ]
   },
   {
@@ -179,11 +209,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n",
+    "shuttle.csv = shuttle.to_csv(index=False,sep=',')\n",
     "\n"
    ]
   },
@@ -200,12 +230,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "import xlrd\n",
+    "astronaut = pd.read_excel(r'C:\\Users\\Daniel Carvalho\\Desktop\\DataAnalysis\\WEEK2\\DAY4\\labs\\lab-import-export\\your-code\\astronauts.xls')"
    ]
   },
   {
@@ -217,12 +247,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "astronaut.head(3)\n"
    ]
   },
   {
@@ -234,12 +264,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "# Your code here: #need help in this one\n",
+    "astronaut.value_counts()\n"
    ]
   },
   {
@@ -251,12 +281,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "astronaut.csv = astronaut.to_csv(sep = '\\t')\n",
+    "astronaut.csv\n"
    ]
   },
   {
@@ -270,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +311,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.13 ('Classes')",
    "language": "python",
    "name": "python3"
   },
@@ -295,7 +325,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b56b83a77b69817771c5ed78805d5acb0dbb6e361a4327e0e70027e0f158efcf"
+   }
   }
  },
  "nbformat": 4,
